#
#   $Id$
#
#   This is a log of major user-visible changes in each release
#


(unreleased):

Release 1.4.3 (17-Apr-2007):

    - Fix bug in launchd support, introduced in 1.4.2. Remove remnants of
      launchd enable flag which caused reversion to systemstarter in 1.4.2.
      (jberry r24151).
      
    - add functions 'backup' and 'lipo' along with some description
      to be used for lipo-based universal variants, tested with openssl.
      These functions should be considered test only for the time being,
      and should not yet be adopted widely by port authors.
      (pipping r24148).

Release 1.4.2 (16-Apr-2007):

    - New logic for variants overload that basically yields to listing only
      variant +universal on ports that redefine it (pguyot in 24100).

    - Implement brand new fs-traverse command in Pextlib.
      See portfile.7 for documentation (eridius in r24079, r24080, and r24112).

    - Add per-user preferences in ~/.macports/user.conf. This will be used
      for submitter information.
      Simplify selection of ports.conf file:
        - ~/.portsrc is no longer supported.
        - Search order for ports.conf is now:
            - PORTSRC
            - ~/.macports/ports.conf
            - ${prefix}/etc/ports.conf
          Only the first file found will be parsed and used.
       (jberry r24071, r24113, r24114)

    - Improvements on livecheck: fixed a report bug, improved ruby group
      default behavior (pguyot in r24026 and r24018)
      
    - Remove xar from the build. xar doesn't build on panther due to
      a libxml2 lib too old for xar requirements. We'll find another
      way to deal with xar, perhaps by requiring users to install the
      xar port when they need its services. (jberry r24107:r24108)
      
    - Remove configure switch for building launchd support. (jberry r24107:r24108)
    
    - Remove compatibility upgrade for conf files from
      darwinports 1.1 to 1.2. (jberry r24106).

Release 1.4.1 (14-Apr-2007):
